--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
     "lint": "eslint .",
     "preview": "vite preview"
   },
+  "engines": {
+    "node": ">=20.0.0"
+  },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
     "@radix-ui/react-collapsible": "^1.1.0",
-    "@radix-ui/react-dialog": "^1.1.2",
-    "@radix-ui/react-dropdown-menu": "^2.1.1",
-    "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
@@ -26,10 +26,8 @@
     "lucide-react": "^0.462.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-force-graph": "^1.47.7",
     "react-force-graph-2d": "^1.27.1",
     "react-force-graph-3d": "^1.27.0",
-    "react-hook-form": "^7.53.0",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^6.26.2",
     "remark-gfm": "^4.0.1",
