--- a/env.example
+++ b/env.example
@@ -1,3 +1,10 @@
 # Gemini API Configuration
 # Get your API key from: https://makersuite.google.com/app/apikey
-VITE_GEMINI_API_KEY=your_gemini_api_key_here 
+VITE_GEMINI_API_KEY=your_gemini_api_key_here
+
+# Neon Database Configuration
+# Get your connection string from: https://console.neon.tech/
+# For Netlify Functions (serverless): Use DATABASE_URL
+DATABASE_URL=postgresql://username:password@hostname/database?sslmode=require
+# For client-side (optional): Use VITE_NEON_DATABASE_URL
+VITE_NEON_DATABASE_URL=postgresql://username:password@hostname/database?sslmode=require 
